# interface_relationship_manager

./: README.md  pyproject.toml
interface_relationship_manager/: __init__.py  models.py  navigation.py  urls.py  utils.py  views.py
interface_relationship_manager/migrations/: 0001_initial.py
interface_relationship_manager/templates/interface_relationship_manager/: select_device.html
